<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Saydaliyati</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
    <string name="NSS">Numéro de sécurité social</string>
    <string name="passowrd">Mot de Passe</string>
    <string name="login">Connexion</string>
    <string name="show_pwd">Afficher Mot de Passe</string>
    <string name="hide_pwd">Masquer Mot de Passe</string>
    <string name="forgot">Mot de Passe oublié?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Vous n\'avez pas un compte? Inscrivez-vous ici.</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="mobileNumber">Numéro de téléphone</string>
    <string name="location">Adresse</string>
    <string name="confirmPassword">Confirmez Mot de Passe</string>
    <string name="terms_conditions">En cliquant sur INSCRIRE, vous acceptez tous les termes et conditions.</string>
    <string name="signUp">INSCRIRE</string>
    <string name="already_user">Vous avez déjà un compte? Connectez-vous ici</string>
    <string name="registered_emailid">Entrez votre Numéro de Téléphone ici :</string>
    <string name="submit">VALIDER</string>
    <string name="back">RETOUR</string>
    <string name="code">Enter Code</string>
    <string name="payer">Payer</string>
    <string name="payment_">Saisir le montant à payer</string>
    <string name="Add_commande">Envoyer ordonnance</string>
    <string name="message_conf">Entrez le code de vérification que vous avez reçu par SMS</string>
    <string name="continu">Conituner</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="upload">Télécharger ordonnance</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_master">Saydaliyati</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_get_started">GetStarted</string>
    <!-- TODO: Remove or change this placeholder text -->



</resources>