<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="fill_parent"
                                                   android:layout_height="fill_parent"
                                                   android:gravity="center"
                                                   android:orientation="vertical"
                                                   android:padding="20dp" android:id="@+id/linearLayout">

    <EditText
            android:id="@+id/registered_emailid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@color/bt_text_blue"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumber"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/bt_color_primary_dark"
            android:textColorHint="@color/bt_color_primary_dark"
            android:textSize="16sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/registered_emailid">

        <TextView
                android:id="@+id/backToLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
                android:background="@color/common_google_signin_btn_text_light_focused"/>

        <TextView
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/submit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
                android:background="@color/common_google_signin_btn_text_light_focused"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:text="@string/registered_emailid"
            android:layout_width="309dp"
            android:layout_height="0dp"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>