<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="20dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical" android:layout_centerHorizontal="true">

            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/img_code_verification"/>

            <TextView
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/message_conf"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/CodeReceived"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/code"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="16sp" android:inputType="textCapCharacters"/>

            </LinearLayout>

            <Button
                    android:id="@+id/confCodeBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/loginbutton_selector"
                    android:padding="3dp"
                    android:text="@string/continu"
                    android:textColor="@color/background_color"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/confCodeBtn"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"/>

        </LinearLayout>



    </RelativeLayout>

</LinearLayout>