<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Initialize_Password_Fragment"
                                                   android:id="@+id/frameLayout">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Réinitialiser Mot de Passe"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" android:id="@+id/textView2"
            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/password2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/confirmPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/confirm_password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/password2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/ConfirmPswBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/signUp"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar4" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/ConfirmPswBtn"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="181dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="182dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>